mgmt/ingress/ingress-argocd-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-prod
  namespace: argocd
  annotations:
    acme.cert-manager.io/http01-ingress-class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.code-lab.kr
    secretName: argocd-prod-tls
  rules:
  - host: argocd.code-lab.kr
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              name: https
