mgmt/ingress/ingress-development-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: development-prod
  namespace: tuplus
  annotations:
    acme.cert-manager.io/http01-ingress-class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 999m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - development.code-lab.kr
      secretName: development-prod-tls
  rules:
    - host: development.code-lab.kr
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api
                port:
                  number: 4000
