mgmt/ingress/ingress-jenkins-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-prod
  namespace: jenkins
  annotations:
    acme.cert-manager.io/http01-ingress-class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 999m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkins.code-lab.kr
    secretName: jenkins-prod-tls
  rules:
  - host: jenkins.code-lab.kr
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jenkins
            port:
              number: 8080
